obs2/rust/core/src/ffi.rs


    /// Whether the replay buffer is enabled in the active profile's output
    /// settings (the "Enable Replay Buffer" checkbox). See the C bridge.
    fn ge_obs_replay_buffer_enabled() -> bool;
    /// Whether OBS currently has a usable replay-buffer output object. This can
    /// be false even when the profile checkbox is true, such as simple lossless
    /// recording where OBS disables replay buffer.
    fn ge_obs_replay_buffer_available() -> bool;
    /// Configured maximum replay-buffer duration in seconds, or -1 if the
    /// active profile config cannot be read.
    fn ge_obs_replay_buffer_max_seconds() -> i64;
    /// Configured directory OBS writes replay-buffer files into. Returns false
    /// when OBS cannot provide one or `buffer` is too small.
    fn ge_obs_replay_buffer_output_directory(buffer: *mut c_char, buffer_size: usize) -> bool;
    /// Current plugin OBS data path. Returns false when OBS cannot provide one or `buffer` is too small.
    fn ge_obs_module_data_path(buffer: *mut c_char, buffer_size: usize) -> bool;
    /// Configured OBS video frame rate. Falls back to active render FPS when the
    /// configured rate cannot be read. Returns 0.0 if OBS cannot provide either.
    fn ge_obs_video_fps() -> f64;
    fn ge_obs_collect_source_names(buffer: *mut c_char, buffer_size: usize);
    /// Renders the named source to a freshly `malloc`'d BGRA buffer
    /// (`width*height*4`), writing dims to out params; null if not found. Caller
    /// frees via [`free`]. Spins up a throwaway ctx; repeat callers should reuse one.
    fn ge_obs_get_source_frame(source_name: *const c_char, out_width: *mut u32, out_height: *mut u32) -> *mut u8;

    /// Creates a capture context; null on failure, release via [`ge_capture_destroy`].
    /// When `double_buffered`, readback is pipelined (one frame latency) and the first
    /// frame after creation/resize primes the pipeline, returning null even on success.
    fn ge_capture_create(double_buffered: bool) -> *mut GeCaptureCtx;
    /// Renders the source into a `malloc`'d BGRA buffer via the context's surfaces;
    /// same ownership as [`ge_obs_get_source_frame`] (free via [`free`]). `region`
    /// captures/resizes a sub-rect; else `max_height` downscales; null+0 = native.
    fn ge_capture_get_frame(
        ctx: *mut GeCaptureCtx,
        source_name: *const c_char,
        max_height: u32,
        region: *const GeCaptureRegion,
        out_width: *mut u32,
        out_height: *mut u32,
        timings: *mut GeCaptureTimings,
    ) -> *mut u8;
    /// Destroys a capture context and its surfaces.
    fn ge_capture_destroy(ctx: *mut GeCaptureCtx);

    /// Registers a per-frame render callback. While registered, `cb(param, ..)`
    /// fires once per rendered frame on the graphics thread (inside a graphics
    /// context), so it may capture via [`ge_capture_get_frame`] directly.
    fn ge_obs_register_frame_callback(cb: GeFrameCb, param: *mut c_void);
    /// Unregisters a callback registered with [`ge_obs_register_frame_callback`].
    /// Serializes with callback invocation: once it returns, `cb` is neither
    /// running nor will run again, so `param` is safe to free.
    fn ge_obs_unregister_frame_callback(cb: GeFrameCb, param: *mut c_void);

    /// Emits one pre-formatted line into OBS's log via `blog`. The message is
    /// passed through `blog`'s `"%s"`, so any `%` it contains is literal. The
    /// bridge maps [`GeLogLevel`] to the OBS `LOG_*` level.
    fn ge_obs_blog(level: GeLogLevel, msg: *const c_char);

    fn obs_frontend_get_user_config() -> *mut c_void;
    fn config_get_string(config: *mut c_void, section: *const c_char, name: *const c_char) -> *const c_char;
    fn config_set_string(config: *mut c_void, section: *const c_char, name: *const c_char, value: *const c_char);
    fn config_save_safe(config: *mut c_void, temp_ext: *const c_char, backup_ext: *const c_char) -> c_int;

    /// libc `free`, used to release buffers handed back by the C bridge.
    fn free(ptr: *mut c_void);

    /// Wakes the shim's reload worker to apply a staged update (see reload.h).
    /// Safe from any context, but never from a tokio worker whose runtime the
    /// reload tears down; see update_apply.rs's `trigger_apply` (detached thread).
    fn ge_core_trigger_reload();
}
